Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37891

Windows:Menu bar doesn't handle mouse click and move properly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.3.0 RC1
    • 5.3.0 Beta1
    • Widgets: Main Window
    • None
    • Windows 7
    • 828cfb4019939a39c84e5c5e17dc8cb52e9f63fd (stable, 3.4.2014, 5.3)

      This issue is not present in Qt 5.2 release, appeared in 5.3 Beta (didn't try 5.3 Alpha). It happens on Windows, haven't tested 5.3 on Mac yet.

      Create a new Qt Gui application in Qt creator. Add a menu bar with a couple top-level items to the main window. Build and run the application. Click any top-level menu item, it'll drop down as expected. Click any other one randomly. Then any other again. After a couple of seconds clicking different top-level menu items you'll see that you now need 2 clicks to make it open as opposed to the usual 1. Also, sometimes in this state a menu item remains highlighted after moving mouse cursor away from the menu bar. This one is harder to reproduce.

      Steps to reproduce issue 1:

      • Launch Designer
      • Click on "Edit" menu -> menu opens
      • Click again -> menu closes ( QTBUG-32807 )
      • Click on "File" -> Note menu does NOT open

      Similarly, this can be reproduced with qtbug37891.zip by clicking on "Edit", closing and then clicking on "File". Note that this has Heisenbug characteristics, when running with the diagnostic patch applied, the output should be redirected to a file.

        1. qtbug37891_52.log
          47 kB
        2. qtbug37891_53.log
          41 kB
        3. qtbug37891_diag.patch
          12 kB
        4. qtbug37891_linux_53.log
          9 kB
        5. qtbug37891.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            violetgiraffe Alex
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes