Avoid double clicks confusing popups

Setting qt_button_down on DblClick is dubious and breaks popups like menus
since they won't appear correctly on every click anymore when clicking on
them rapidly several times.

Task-number: QTBUG-37891
Change-Id: Ic6cbbbe8b42891d2f9fa2ff66aa42bb89230d896
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@digia.com>
Reviewed-by: Rick Stockton <rickstockton@reno-computerhelp.com>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>

cregit: 828cfb4019939a39c84e5c5e17dc8cb52e9f63fd https://github.com/qt/qtbase/commit/828cfb4019939a39c84e5c5e17dc8cb52e9f63fd